--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "helmet": "^6.1.4",
     "mongoose": "^7.0.3",
     "underscore": "^1.13.6"
