--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "helmet": "^6.1.4",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^7.0.3",
     "underscore": "^1.13.6"
   },
