created loginUser and registerUser endpoints

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DEBUG=app:startup
 NODE_ENV="development" 
 # NODE_ENV="production"
 CONNECTION_STRING=mongodb://127.0.0.1/vidly
+ACCESS_TOKEN_SECRET_KEY=SECRETKEYISBEHAPPY
