--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "Adesh Pramod Jadhav",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "helmet": "^6.1.4",
     "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.3",
     "underscore": "^1.13.6"
   },
