--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "helmet": "^6.1.4",
