Implement Authentication and Authorization

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
-PORT=3000
-DEBUG=app:startup
-NODE_ENV="development" 
-# NODE_ENV="production"
+PORT=5000
 CONNECTION_STRING=mongodb://127.0.0.1/vidly
 ACCESS_TOKEN_SECRET_KEY=SECRETKEYISBEHAPPY
+# NODE_ENV=production
+NODE_ENV=development
+
+DEBUG=app:startUp,app:db  #with this you can see debugging messages in these two namespaces
+# DEBUG=app:startUp  
+# DEBUG=app:db # messages related to database
+# DEBUG=  #if don't want to see anything then set empty. ex. DEBUG=
+# DEBUG=app:*   # to see all messages
