--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
   "keywords": [],
   "author": "Adesh Pramod Jadhav",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "compression": "^1.7.4",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "helmet": "^6.1.4",
-    "joi-objectid": "^4.0.2",
-    "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^7.0.3",
-    "underscore": "^1.13.6"
-  },
   "devDependencies": {
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "config": "^3.3.9",
     "debug": "^4.3.4",
-    "dotenv": "^16.0.3",
-    "joi": "^17.9.1",
-    "jshint": "^2.13.6",
+    "express": "^4.18.2",
+    "fawn": "^2.1.5",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "joi-objectid": "^4.0.2",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.1",
     "morgan": "^1.10.0"
   }
 }
